force-app/main/default/objects/NCMT_EstimateAdjustment__c/NCMT_EstimateAdjustment__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <label>Estimate Adjustment</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimate Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>