force-app/main/default/objects/NCMT_EstimateAdjustment__c/fields/CumulativeLocationAdjustment__c.field-meta.xml
<CustomField>
    <fullName>CumulativeLocationAdjustment__c</fullName>
    <formula>LocationMultiplier__c *  ParametricAdjustment__c *  PLAAdjustment__c *  SeismicDesignFactor__c *  SetupQualityAdjustment__c *  SmallBusinessHUB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative Location Adjustment*</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>