force-app/main/default/objects/NCMT_EstimateAdjustment__c/fields/CumulativeLocationAdjustmentDef__c.field-meta.xml
<CustomField>
    <fullName>CumulativeLocationAdjustmentDef__c</fullName>
    <formula>LocationMultiplierDef__c *  ParametricAdjustmentDef__c *  PLAAdjustmentDef__c *  SeismicDesignFactorDef__c *  SetupQualityAdjustmentDef__c   * SmallBusinessHUBDef__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative Location Adjustment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>