force-app/main/default/objects/NCMT_EstimateAdjustment__c/fields/LocationMultiplier__c.field-meta.xml
<CustomField>
    <fullName>LocationMultiplier__c</fullName>
    <label>Location Multiplier(Washington DC=1.00)*</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>