force-app/main/default/objects/NCMT_EstimateAdjustment__c/fields/NCMTProject__c.field-meta.xml
<CustomField>
    <fullName>NCMTProject__c</fullName>
    <label>NCMT Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>Estimate Adjustments</relationshipLabel>
    <relationshipName>Estimate_Adjustments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>