force-app/main/default/objects/NCMT_EstimateAdjustment__c/fields/ParametricAdjustmentDef__c.field-meta.xml
<CustomField>
    <fullName>ParametricAdjustmentDef__c</fullName>
    <label>Parametric Adjustment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>