force-app/main/default/objects/NCMT_EstimateAdjustment__c/fields/PLAAdjustmentDef__c.field-meta.xml
<CustomField>
    <fullName>PLAAdjustmentDef__c</fullName>
    <label>PLA Adjustment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>