force-app/main/default/objects/NCMT_EstimateAdjustment__c/fields/SeismicDesignFactor__c.field-meta.xml
<CustomField>
    <fullName>SeismicDesignFactor__c</fullName>
    <label>Seismic Design Factor*</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>