force-app/main/default/objects/NCMT_EstimateAdjustment__c/fields/SeismicDesignFactorDef__c.field-meta.xml
<CustomField>
    <fullName>SeismicDesignFactorDef__c</fullName>
    <label>Seismic Design Factor</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>