force-app/main/default/objects/NCMT_EstimateAdjustment__c/fields/SetupQualityAdjustment__c.field-meta.xml
<CustomField>
    <fullName>SetupQualityAdjustment__c</fullName>
    <label>Set-up Quality Adjustment*</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>