force-app/main/default/objects/NCMT_EstimateAdjustment__c/fields/SetupQualityAdjustmentDef__c.field-meta.xml
<CustomField>
    <fullName>SetupQualityAdjustmentDef__c</fullName>
    <label>Set-up Quality Adjustment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>